--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
      <title> Web page </title>
 </head>
 <body>
+     <p>link on this below iamge to read about IAS from wikipedia</p>
     <center><a href= "https://en.wikipedia.org/wiki/Indian_Administrative_Service"> <img src="IAS.jpg"  alt="IAS"style="width:300px;height:200px;"></a></center>
 </body>
+
 </html>
